# graphstore

./: .gitattributes  .gitignore  BENCHMARKS.md  LICENSE  README.md  RESULTS.md  VAULT_PLAN.md  VAULT_REVISION.md  bench_brain.py  bench_flip.py  bench_vectors.py  benchmarking.md  graphstore-implementation-plan.md  howtorun.md  populate_zen.py  pyproject.toml  summary.md
.github/workflows/: ci.yml
autoresearch/: README.md  config.example.json  correctness.py  program.md  run_loop.py  tune_config.py  tuned_config.48.json  tuned_config.json  tuned_config.small.json
benchmarks/: BENCHMARK_LOG.md  README.md  longmemeval.py
benchmarks/algos/: ENVIRONMENT.md  README.md  allowlist.py  bench_one.py  conftest.py  dump_env.py  run.sh  test_compact_bench.py  test_eviction_bench.py  test_fusion_bench.py  test_graph_bench.py  test_hybrid_rag_bench.py  test_materialization_bench.py  test_pcsr_bench.py  test_query_planner_bench.py  test_sort_bench.py  test_spreading_bench.py  test_text_bench.py  test_vector_masking_bench.py
benchmarks/framework/: Dockerfile.bench  Dockerfile.bench.gpu  README.md  __init__.py  adapter.py  chain_next.sh  cli.py  datasets.py  docker_runner.py  llm_batch.py  llm_client.py  llm_judge.py  metrics.py  ratchet50.py  ratchet_test.py  report.py  run_locomo.py  runner.py  smoke_test.py
benchmarks/framework/adapters/: __init__.py  chroma_bm25.py  graphstore_.py  letta.py  llamaindex_.py  mem0.py
benchmarks/framework/results/: .gitignore
benchmarks/framework/scripts/: bench_scheduler.sh
benchmarks/kaggle/: bench_config.py  chroma_jina_500.py  graphstore_jina_500.py  gs-kernel-metadata.json  kernel-metadata.json
docs/: DOCKER_GPU.md  GPU_BENCH_STATE.md
docs/superpowers/plans/: 2026-03-18-light-mode-design-tokens.md  2026-03-18-playground.md  2026-03-20-agentic-brain-db.md  2026-03-20-columnar-storage.md  2026-03-21-document-layer.md  2026-03-21-opt-in-layers.md  2026-03-21-vector-store.md
docs/superpowers/specs/: 2026-03-18-light-mode-design-tokens.md  2026-03-18-playground-design.md  2026-03-20-agentic-brain-db-design.md  2026-03-20-columnar-storage-design.md  2026-03-20-vector-store-design.md  2026-03-21-document-layer-design.md  2026-03-21-opt-in-layers-design.md  2026-03-24-command-queue-design.md  2026-03-24-log-cron-design.md  2026-04-09-longmemeval-benchmark-design.md
graphstore/: __init__.py  cli.py  columns.py  config.py  cron.py  edges.py  errors.py  evolve.py  evolve_defaults.py  graphstore.py  memory.py  path.py  schema.py  server.py  snapshot.py  store.py  wal.py
graphstore/algos/: README.md  __init__.py  aggregate.py  chunker.py  column_ops.py  compact.py  consolidation.py  cost.py  edges_ops.py  eviction.py  fusion.py  graph.py  materialization.py  measure.py  sort.py  spreading.py  string_gc.py  text.py  visibility.py
graphstore/core/: __init__.py  columns.py  edges.py  errors.py  memory.py  optimizer.py  path.py  queue.py  runtime.py  scheduler.py  schema.py  store.py  strings.py  temporal.py  types.py
graphstore/document/: __init__.py  store.py
graphstore/dsl/: ast_nodes.py  cost_estimator.py  executor.py  executor_base.py  executor_reads.py  executor_system.py  executor_writes.py  filtering.py  grammar.lark  parser.py  tagger.py  transformer.py  visibility.py
graphstore/dsl/handlers/: __init__.py  _registry.py  aggregation.py  beliefs.py  context.py  edges.py  ingest.py  intelligence.py  mutations.py  nodes.py  pattern.py  system.py  traversal.py  vault.py
graphstore/embedding/: __init__.py  base.py  fastembed_embedder.py  llamacpp_embedder.py  model2vec_embedder.py  onnx_hf_embedder.py  postprocess.py  reranker.py
graphstore/ingest/: __init__.py  base.py  chunker.py  connector.py  docling_ingestor.py  markitdown_ingestor.py  pymupdf4llm_ingestor.py  registry.py  router.py  vision.py
graphstore/persistence/: database.py  deserializer.py  serializer.py
graphstore/registry/: __init__.py  installer.py  models.py
graphstore/retrieval/: __init__.py  planner.py
graphstore/vault/: __init__.py  executor.py  manager.py  parser.py  sync.py
graphstore/vector/: __init__.py  store.py
graphstore/voice/: __init__.py  protocol.py  stt.py  tts.py
indexes/: README.md  architecture.md  query_lifecycle.md
mcp_refs/: concurrency-model.md  mock-testing-datasets.md  prior-art-recall-pageindex.md  retrieval-model.md  self-balancing.md
playground/: README.md  index.html  package-lock.json  package.json  vite.config.ts
playground/src/: App.tsx  index.css
playground/src/api/: client.ts
playground/src/components/: EditorPanel.tsx  GraphPanel.tsx  ResultsPanel.tsx  SettingsDialog.tsx  StatsBar.tsx  Toolbar.tsx
playground/src/examples/: class-hierarchy.ts  code-graph.ts  function-call-graph.ts  index.ts  microservices-map.ts
playground/src/hooks/: useAutoLayout.ts  useFlowStore.ts  useGraphStore.ts
playground/src/lang/: graphstore.ts
scripts/: download_fixtures.py
skills/graphstore-ingestion/: SKILL.md
tests/: conftest.py  test_admin_contracts.py  test_aggregate.py  test_algos_purity.py  test_atomic_compaction.py  test_auto_reembed.py  test_beliefs.py  test_column_integration.py  test_columnar_store.py  test_columns.py  test_command_queue.py  test_compact.py  test_compaction_sentinel.py  test_config.py  test_cost_estimator.py  test_cron.py  test_deferred_embeddings.py  test_deserializer_kinds.py  test_document_store.py  test_dsl_parser.py  test_dsl_system.py  test_dsl_user_reads.py  test_dsl_user_writes.py  test_e2e_real_embedder.py  test_edges.py  test_edges_to_perf.py  test_embedding.py  test_eviction.py  test_evolution.py  test_evolution_wiring.py  test_extensibility.py  test_fusion.py  test_gaps.py  test_incremental_checkpoint.py  test_ingest.py  test_integration.py  test_integration_fixtures.py  test_log_layer.py  test_longmemeval_benchmark.py  test_materialization.py  (+31 more)
tests/fixtures/benchmarks/: longmemeval_sample.json
tests/fixtures/html/: knowledge-graph.html  llm.html  rag.html  transformer.html  (+1 more)
tinygraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zen-graph-db/: graphstore.db
(+20 files in other folders)
