[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphstore"
version = "0.3.0"
description = "Agentic brain DB - the cognitive layer for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kailash Mahavarkar", email = "kailashmahavarkar5@gmail.com" },
]
keywords = ["graph", "database", "in-memory", "dsl", "sparse-matrix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "scipy>=1.10",
    "lark>=1.1",
    "numpy>=1.24",
    "usearch>=2.0",
    "model2vec>=0.4",
    "pyyaml>=6.0",
    "markitdown>=0.1",
    "pymupdf4llm>=0.1",
    "pymupdf>=1.20",
    "msgspec>=0.18",
    "croniter>=6.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "orjson>=3.11.8",
]

[project.urls]
Homepage = "https://github.com/orkait/graphstore"
Repository = "https://github.com/orkait/graphstore"
Issues = "https://github.com/orkait/graphstore/issues"

[project.scripts]
graphstore = "graphstore.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",
]
playground = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
voice = [
    "sounddevice>=0.4",
    "moonshine-voice",
    "piper-tts>=1.4",
]
ingest-pro = [
    "docling>=2.0",
    "openai>=1.0",
]
fastembed = [
    # Qdrant's lightweight ONNX embedder wrapper — unlocks 30+ pre-exported
    # BERT-family models (BGE, mxbai, e5, snowflake, jina-v2, MiniLM, nomic)
    # without dragging in torch. Shares the onnxruntime/tokenizers install
    # that graphstore already uses, so the added footprint is ~20-30 MB.
    "fastembed>=0.8",
]
gpu = [
    # Opt-in GPU acceleration for the ONNX embedder path. The pypi
    # onnxruntime-gpu wheel is linked against CUDA 12 sonames, so we
    # also bundle the matching nvidia-*-cu12 runtime wheels — the
    # OnnxHFEmbedder dlopens them via ctypes at first use so users don't
    # have to set LD_LIBRARY_PATH. Activate with GRAPHSTORE_GPU=1.
    "onnxruntime-gpu>=1.23",
    "nvidia-cublas-cu12>=12.0",
    "nvidia-cuda-runtime-cu12>=12.0",
    "nvidia-cuda-nvrtc-cu12>=12.0",
    "nvidia-cudnn-cu12>=9.0",
    "nvidia-cufft-cu12>=11.0",
    "nvidia-curand-cu12>=10.0",
    "nvidia-nvjitlink-cu12>=12.0",
]

[tool.setuptools.packages.find]
include = ["graphstore*"]

[tool.setuptools.package-data]
"graphstore.dsl" = ["*.lark"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "graphstore/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
]
